# pixels

./: .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  a.out  classes.h  main  main.app  main.cpp
include/: camera.hpp  colourbar.hpp  component.hpp  gamemanager.hpp  particle.hpp  pixel.hpp  player.hpp  projectile.hpp
src/: colourbar.cpp  component.cpp  gamemanager.cpp  particle.cpp  pixel.cpp  player.cpp  projectile.cpp
